Fixed justify content for loading on mobile.

--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -2,7 +2,6 @@
     height: 100%;
     width: min(100%, 1820px);
     margin: 100px auto;
-    justify-content: center;
 }
 
 #Dashboard-left {
